# cob_multi_robots

./: README.md
cob_gateway/: CMakeLists.txt  package.xml
cob_gateway/launch/: robot.launch  robot_no_zeroconf.launch  server.launch  server_no_zeroconf.launch
cob_gateway/param/: server.yaml
cob_rocon_multimaster/: CMakeLists.txt  README.md  package.xml
cob_rocon_multimaster/launch/: robot.launch  server.launch
cob_rocon_multimaster/param/serverslam/: robot.yaml
