<package>
  <name>cob_gateway</name>
  <version>0.0.1</version>
  <description>This package provides launch files for starting the hub and gateways.</description>
  
  <maintainer email="blablabla@ipa.fraunhofer.de">Bla Bla</maintainer>
  
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rocon_hub</run_depend>
  <run_depend>rocon_gateway</run_depend>
  <run_depend>zeroconf_avahi</run_depend>

</package>
